fixed menu collapse

--- a/src/app/shared/widgets/menus/menu-tiny/menu-tiny.component.scss
+++ b/src/app/shared/widgets/menus/menu-tiny/menu-tiny.component.scss
@@ -3,7 +3,6 @@
 :host {
     .mat-icon {
         vertical-align: middle;
-        // margin-right: 20px;
     }
 }
 
@@ -76,6 +75,16 @@ ul {
 .grid-toggle-tiny {
   height: 50px;
   grid-template-columns: minmax(45px, 50px) 140px;
+  
+  @include for-phone-only {
+    grid-template-columns: minmax(45px, 50px);
+  }
+}
+
+.grid-toggle-collapsed {
+  height: 50px;
+  // grid-template-columns: minmax(45px, 50px) 140px;
+  
   @include for-phone-only {
     grid-template-columns: minmax(45px, 50px);
   }
